--- a/pm2.config.json
+++ b/pm2.config.json
@@ -1,7 +1,7 @@
 {
     "apps":[
         {
-            "script":"/node_modules/nuxt/bin/nuxt.js",
+            "script":"./node_modules/nuxt/bin/nuxt.js",
             "args":"start"
         }
     ]
