--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,4 +61,5 @@ jobs:
           tar xvf realworld-nuxtjs1.tar -C .\realworld-nuxtjs1
           cd .\realworld-nuxtjs1
           npm install 
-          pm2 reload pm2.config.json && pm2 save
+          pm2 save
+          pm2 reload pm2.config.json
